# lotuslab

./: .gitignore  Cargo.toml  README.md  REUSE.toml  biome.jsonc
.cargo/: config.toml
.zed/: settings.json
crates/lotuslab-core/: Cargo.toml  README.md  build.rs  tauri.conf.json  tauri.conf.json.license
crates/lotuslab-core/capabilities/: default.json
crates/lotuslab-core/src/: commands.rs  lib.rs  main.rs
crates/lotuslab-db/: Cargo.toml  README.md
crates/lotuslab-db/src/: lib.rs  schema.surql  store.rs
crates/lotuslab-db/src/repos/: mod.rs
crates/lotuslab-db/src/repos/cards/: mod.rs
crates/lotuslab-db/src/repos/user/: folder.rs  list.rs  mod.rs  project.rs
crates/lotuslab-external/: Cargo.toml  README.md
crates/lotuslab-external/src/: lib.rs
crates/lotuslab-external/src/mtgjson/: mod.rs
crates/lotuslab-services/: Cargo.toml
crates/lotuslab-services/src/: lib.rs
crates/lotuslab-services/src/user/: folder.rs  mod.rs
crates/lotuslab-types/: Cargo.toml  README.md
crates/lotuslab-types/src/: lib.rs
crates/lotuslab-types/src/cards/: card_core.rs  card_printing.rs  mod.rs  token_printing.rs
crates/lotuslab-types/src/common/: errors.rs  ids.rs  mod.rs  patch.rs
crates/lotuslab-types/src/user/: folder.rs  list.rs  list_item.rs  mod.rs  project.rs  tag.rs
docs/: README.md  start.md
docs/concepts/: README.md
docs/internals/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  docs.md  releases.md  style_guide.md
docs/operating/: README.md  installing.md
docs/reference/: README.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: bindings.ts  index.tsx
frontend/src/components/: app_header.tsx  icons.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  table.tsx  text-field.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: 404.tsx  card_page.tsx  home_page.tsx  project_page.tsx  search_page.tsx  settings_page.tsx  testing_page.tsx  theme_preview_page.tsx
frontend/src/styles/: animations.css  colors.css  index.css  spacing.css
