# SPDX-FileCopyrightText: 2025 Jesse Aubin <jesseb34r@jesseaubin.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = ["crates/*"]
default-members = ["crates/lotuslab-core"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
authors = ["jesseb34r"]
license = "GPL-3.0-or-later"
version = "0.0.0"
publish = false

[workspace.dependencies]
lotuslab-core = { path = "crates/lotuslab-core" }
lotuslab-db = { path = "crates/lotuslab-db" }
lotuslab-external = { path = "crates/lotuslab-external" }
lotuslab-import = { path = "crates/lotuslab-import" }
lotuslab-services = { path = "crates/lotuslab-services"}
lotuslab-types = { path = "crates/lotuslab-types" }

anyhow = "=1.0.100"
async-trait = "=0.1.89"
chrono = { version = "=0.4.42", default-features = false, features = ["alloc", "std", "clock", "now", "serde"]}
log = "0.4.28"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"]}
surrealdb = { version = "=3.0.0-alpha.11", features = ["kv-mem", "kv-rocksdb"] }
surrealdb-types = "=3.0.0-alpha.11"
tauri = "=2.9.2"
tauri-build = "=2.5.1"
tauri-plugin-log = "=2.7.1"
tempfile = "=3.23"
thiserror = "=2.0.17"
tokio = { version = "=1.48.0", features = ["full"] }
